ifcc-test-output/testfiles-TestsOK-Invalid-14_using_return_name_variable/gcc-compile.txt
input.c: In function ‘main’:
input.c:2:9: error: expected identifier or ‘(’ before ‘return’
    2 |     int return;
      |         ^~~~~~
input.c:3:12: error: expected expression before ‘=’ token
    3 |     return = 3;
      |            ^
input.c:4:12: error: expected expression before ‘return’
    4 |     return return;
      |            ^~~~~~

exit status: 1
